--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td><img src="https://pbs.twimg.com/profile_images/1434329909732597763/VY2SIn19_400x400.jpg" alt="andrea profile picture">
       </td>
       <td>
-        <h1><a href="https://twitter.com/ADE_831">Andrea Rodriguez</a></h1>
+        <h1><a href="https://twitter.com/ADE_831">ADE</a></h1>
         <p><em>Student of <strong>Science Computer</strong></em></p>
       </td>
     </tr>
